force-app/main/default/objects/ServiceTerritoryWorkType/fields/I_ST_Service_Territory_IsActive__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Service_Territory_IsActive__c</fullName>
    <formula>ServiceTerritory.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory IsActive</label>
    <type>Checkbox</type>
</CustomField>