force-app/main/default/objects/ServiceTerritoryWorkType/fields/I_ST_Service_Territory_IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Service_Territory_IsGeneric__c</fullName>
    <formula>ServiceTerritory.I_ST_Is_Generic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory IsGeneric</label>
    <type>Checkbox</type>
</CustomField>