force-app/main/default/objects/ServiceTerritoryWorkType/fields/I_ST_Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Service_Territory_Name__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>